updated .png to reflect PNG in master branch

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<ul>
 				<li>#: s3407441</li>
 				<li>e: <a href="mailto:student@rmit.edu.au" target="_blank">s3407441@student.rmit.edu.au</a></li>
-				<li>w: <a href="http://www.github.com">www.github.com/</a></li>
+				<li>w: <a href="https:shanebunting.github.io/IIT/">www.github.com/</a></li>
 				<li>m: 0448 994 479</li>
 			</ul>
 		</div>
@@ -70,8 +70,8 @@
 			<div class="sectionTitle">
 				<h1>Ideal Job</h1>
 			</div>
-			<img src="idealjobcap1.png"/>
-			<img src="idealjobcap2.png"/>
+			<img src="idealjobcap1.PNG"/>
+			<img src="idealjobcap2.PNG"/>
 
 			<div class="sectionContent">
 				<article>
@@ -115,16 +115,16 @@
 
 					<div class="row">
 						<div class="column">
-							<img src="myersbriggscap1.png" alt="MBTI Results" style="width:100%">
+							<img src="myersbriggscap1.PNG" alt="MBTI Results" style="width:100%">
 						</div>
 					<div class="column">
-							<img src="learningstyletestcap.png" alt="Learning style Results" style="width:100%">
+							<img src="learningstyletestcap.PNG" alt="Learning style Results" style="width:100%">
 						</div>
 					<div class="column">
-							<img src="123testcap1.png" alt="123 Test Results" style="width:100%">"
+							<img src="123testcap1.PNG" alt="123 Test Results" style="width:100%">"
 						</div>
 					<div class="column">		
-							<img src="123testcap2.png" alt="123 Test Results" style="width:100%">"
+							<img src="123testcap2.PNG" alt="123 Test Results" style="width:100%">"
 						</div>
 				</article>
 			</div>
