--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div id="cv">
 	<div class="mainDetails">
 		<div id="headshot">
-			<img src="headshot.jpg" alt="Student Name" />
+			<img src="myhead1.jpg" alt="Shane Bunting" />
 		</div>
 		
 		<div id="name">
-			<h1>Shane Bunting</h1>
-			<h2>ePortfolio</h2>
+			<h1>e portfolio</h1>
+			
 		</div>
 		
 		<div id="contactDetails">
@@ -167,7 +167,6 @@
 					<li>2GB of available disk mimimum, 4 GB recommended</li>
 					<li>256 SSD – 512 SSD would be even better. HDD are also viable, SSD are faster and use less energy</li>
 					<li>1280 x 800 minimum screen resolution</li>
-				</ul>
 
 					Having an Android phone and Apple phone would also be great to be able to test the application as it is developed.</p>
 				</article>
@@ -183,7 +182,9 @@
 
 			</article>
 			<h2>References</h2>
-<p>insert links here as appropriate</p>
+<p>https://fonts.google.com/specimen/Source+Sans+Pro?sidebar.open&selection.family=Source+Sans+Pro#standard-styles</p>
+				<p>https://www.w3schools.com/</p>
+				<p></p>
 
 		</article>
 			</div>
