--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		
 		<div id="name">
 			<h1>e portfolio</h1>
+			<h2>Shane Bunting</h2>
 			
 		</div>
 		
@@ -71,13 +72,15 @@
 				<h1>Ideal Job</h1>
 			</div>
 			<img src="idealjobcap1.PNG"/>
+			<div>
 			<img src="idealjobcap2.PNG"/>
-
+</div>
 			<div class="sectionContent">
 				<article>
 					<h2>Senior Incident Response</h2>
 
 					<h3>Description</h3>
+					
 					<p>To begin with I am still unsure on where I would like to end up and this will most likely change over time and as I become familiar with more technical knowledge during my Bachelors degree. I spent a good amount of time browsing seek, indeed and google, reading different parts of Cyber Security and there are so many directions than I first anticipated.
 
 					I stumbled across this ad on seek for a Cyber Incident Response Specialist, read through the add, and whilst very under qualified at present, found myself intrigued at the idea of incident response within Cyber Security. I actually went on to do a little more research and watched a few things online in regards to incidence response and could somewhat picture myself doing this. This role in particular is for a senior incident responder that works closely with clients to ensure that they are prepared for any security threats that may arise and also assists in being able to protect during an attack and analyse afterwards to implement new strategies and protocols to prevent it happening again. This appeals to me because I believe that privacy, and information within a business is crucial in being kept safe and out of the hands of those who should not have access to it, attackers. Without security measures and people working around the clock to protect this, the type of information that could be obtained could have astronomical effects in the downfall of a business, people within it and even those that have had their information stored. Its not okay for someone to come along and try to destroy this without a second thought on the repercussions that could follow.</p>
@@ -101,7 +104,7 @@
 		<section>
 			<div class="sectionTitle">
 				 <h1>Personality Profile</h1>
-				<img src="myersbriggscap2.png" alt="Defender" />
+				<img src="assertivedefender.jpg" alt="Defender" />
 			</div>
 			
 			<div class="sectionContent">
