--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="cv">
 	<div class="mainDetails">
 		<div id="headshot">
-			<img src="myhead1.jpg" alt="Shane Bunting" />
+			<img src="headwithpup.jpg" alt="Shane Bunting" />
 		</div>
 		
 		<div id="name">
@@ -104,7 +104,7 @@
 		<section>
 			<div class="sectionTitle">
 				 <h1>Personality Profile</h1>
-				<img src="assertivedefender.jpg" alt="Defender" />
+				<img src="assertivedefender.png" alt="Defender" />
 			</div>
 			
 			<div class="sectionContent">
@@ -118,16 +118,16 @@
 
 					<div class="row">
 						<div class="column">
-							<img src="myersbriggscap1.PNG" alt="MBTI Results" style="width:100%">
+							<img src="myersbriggscap1.PNG" alt="MBTI Results" style="width:75%">
 						</div>
 					<div class="column">
-							<img src="learningstyletestcap.PNG" alt="Learning style Results" style="width:100%">
+							<img src="learningstyletestcap.PNG" alt="Learning style Results" style="width:75%">
 						</div>
 					<div class="column">
-							<img src="123testcap1.PNG" alt="123 Test Results" style="width:100%">"
+							<img src="123testcap1.PNG" alt="123 Test Results" style="width:75%">"
 						</div>
 					<div class="column">		
-							<img src="123testcap2.PNG" alt="123 Test Results" style="width:100%">"
+							<img src="123testcap2.PNG" alt="123 Test Results" style="width:75%">"
 						</div>
 				</article>
 			</div>
@@ -180,11 +180,11 @@
 
 			</article>
 			<h2>References</h2>
-<p>https://fonts.google.com/specimen/Source+Sans+Pro?sidebar.open&selection.family=Source+Sans+Pro#standard-styles</p>
-				<p>https://www.w3schools.com/</p>
-				<p>https://developer.android.com/studio</p>
-<p>https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth</p>
-					<p>https://coolors.co/c5fffd-88d9e6-8b8bae-114b5f-374b4a</p>		
+<li>https://fonts.google.com/specimen/Source+Sans+Pro?sidebar.open&selection.family=Source+Sans+Pro#standard-styles</li>
+				<li>https://www.w3schools.com/</li>
+				<li>https://developer.android.com/studio</li>
+<li>https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth</li>
+					<li>https://coolors.co/c5fffd-88d9e6-8b8bae-114b5f-374b4a</li>		
 		</article>
 			</div>
 			<div class="clear"></div>
