--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
 				<li>https://www.w3schools.com/</li>
 				<li>https://developer.android.com/studio</li>
 <li>https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth</li>
-					<li>https://coolors.co/c5fffd-88d9e6-8b8bae-114b5f-374b4a</li>		
+					<li>https://coolors.co/c5fffd-88d9e6-8b8bae-114b5f-374b4a</li>
+				<li>https://github.com/thomasbierly/IIT</li>
+				<p> I used Thomas' github repository to obtain the html and css code. From here i altered it to reflect my own design as much as possible but had a very hard time, and still am, in getting my head around alignning things and where they begin and start. My end result is not 100% where i want it to be and will continue to work on it as i learn more and develop more skills. Thank you Thomas for allowing us to get a start on it by refferencing the code you had there.</p>
 		</article>
 			</div>
 			<div class="clear"></div>
