--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
 			<div class="sectionTitle">
 				<h1>Ideal Job</h1>
 			</div>
-			<img src="idealjobcap1.PNG"/>
+			<img src="idealjobcap1.PNG"/ style="width:50%">
 			<div>
-			<img src="idealjobcap2.PNG"/>
+			<img src="idealjobcap2.PNG"/ style="width:50%">
 </div>
 			<div class="sectionContent">
-				<article>
 					<h2>Senior Incident Response</h2>
 
 					<h3>Description</h3>
@@ -108,7 +107,6 @@
 			</div>
 			
 			<div class="sectionContent">
-				<article>
 					<h2>Results for My Online Tests</h2>
 					<p>After taking the Myers-Briggs test I end up being an Assertive Defender and for this it gives me a clearer understanding behind the individual I am. Upon reading through the personality traits I found myself reading descriptions that I would use if I were to describe myself. I generally see myself as an introvert who whilst in the shadows is very observant of everything that its happening around me. I am very judgemental of things and need to have things planned out and followed in order to maintain happiness for myself. Whilst being introverted I do strongly believe in my abilities and decisions that I feel I have a good understanding of and am generally on the fence when it comes to making decisions. Depending on the situation I will either think or let me feelings control the outcome. In regards to my learning style I am very visual base which is why at times I feel it hard to get anything out of the collaborate sessions that I attend weekly. The approach I need to take is a listen, look and note down anything of importance as the lecture or tutorial takes place just to stay on track and not get distracted. Lastly I wanted to take another personality test just to give myself more information behind the person I am. The last test, was good for myself to see as after the results were shown it actually listed based off my responses to the visual questions asked, a list of suggested occupations. Whilst the middle one has absolutely nothing to do with where I want to head in life I can see why it popped up due to the nature of investigative skills and maintain records. The other 2 results how ever were both computer and I.T based which was good to see as this is where I am looking to steer my life towards. Although not directly related to my end goal it was good to see some reassurance that my personality could be ideal for job types that are similar to those of software testers and analysts. 
 
@@ -140,7 +138,6 @@
 			</div>
 			
 			<div class="sectionContent">
-				<article>
 					<h2>Overview</h2>
 					<p>The Mekanik is a mobile phone application that will be both available across iPhone and Android that allows users to search a data base built around all makes and models of cars and list a variety of information. This information will range from oil grades to engine capacities and even common issues on any searched vehicle, allowing the average joe, an apprentice or even a qualified mechanic to have a world of resources available at their fingertips. The data base will be built off of all current known car knowledge and information readily available across the internet (forums, videos, manufactures sites ect) and will have the ability to grow and develop at later stages through user input and verification.<p>
 	
