--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>27 year old, Melbourne based Libra
-						Multiple certificates obtained across many different areas.
-						Fitness, Multimedia, Electrician to name a few. Have also attended university once before for Game Art and Animation</li> 
+					<p>27 year old, Melbourne based Libra.
+						Multiple certificates obtained across many different industries.
+						Fitness, Multimedia, Electrical to name a few. 
+						I Have also attended university for Game Art and Animation</li> 
 						My general interests are Fitness, Cars, Family, Dogs, Computers, Gaming, Animation.</li>
 						Little interesting fact – When I was in year 10, so 15 years old, my parents actually took my brother and I out of school for a year and we travelled around Australia (Tasmania inc) and also the South island of New Zealand. Life changing experience it really was.</p>
 				</div>
@@ -108,7 +109,6 @@
 			</div>
 			
 			<div class="sectionContent">
-				<article>
 					<h2>Results for My Online Tests</h2>
 					<p>After taking the Myers-Briggs test I end up being an Assertive Defender and for this it gives me a clearer understanding behind the individual I am. Upon reading through the personality traits I found myself reading descriptions that I would use if I were to describe myself. I generally see myself as an introvert who whilst in the shadows is very observant of everything that its happening around me. I am very judgemental of things and need to have things planned out and followed in order to maintain happiness for myself. Whilst being introverted I do strongly believe in my abilities and decisions that I feel I have a good understanding of and am generally on the fence when it comes to making decisions. Depending on the situation I will either think or let me feelings control the outcome. In regards to my learning style I am very visual base which is why at times I feel it hard to get anything out of the collaborate sessions that I attend weekly. The approach I need to take is a listen, look and note down anything of importance as the lecture or tutorial takes place just to stay on track and not get distracted. Lastly I wanted to take another personality test just to give myself more information behind the person I am. The last test, was good for myself to see as after the results were shown it actually listed based off my responses to the visual questions asked, a list of suggested occupations. Whilst the middle one has absolutely nothing to do with where I want to head in life I can see why it popped up due to the nature of investigative skills and maintain records. The other 2 results how ever were both computer and I.T based which was good to see as this is where I am looking to steer my life towards. Although not directly related to my end goal it was good to see some reassurance that my personality could be ideal for job types that are similar to those of software testers and analysts. 
 
