--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Shane Bunting-ePortfolio</title>
+<title>MyePortfolio</title>
 
 <meta name="viewport" content="width=device-width"/>
 <meta name="description" content="ePortfolio for Student Name."/>
