--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<ul>
 				<li>#: s3407441</li>
 				<li>e: <a href="mailto:student@rmit.edu.au" target="_blank">s3407441@student.rmit.edu.au</a></li>
-				<li>w: <a href="http://www.github.com">https://github.com/shanebunting/IIT/</a></li>
+				<li>w: <a href="https://github.com/shanebunting/IIT/">www.github.com</a></li>
 				<li>m: 0448 994 479</li>
 			</ul>
 		</div>
