--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 				<h1>Ideal Job</h1>
 			</div>
 
-			<img src="idealjobcap1.PNG"/ style="float:left;">
+			<img src="idealjobcap1.PNG"/ style="float:left;" width="300" height="400">
 			<div>
-			<img src="idealjobcap2.PNG"/ style="float:left;%">
+			<img src="idealjobcap2.PNG"/ style="float:left;" width="300" height="400"">
 </div>
 			<div class="sectionContent">
 				<article>
