--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>Ideal Job</h1>
-			<img src="idealjobcap1.PNG"/ style="float:left;" width="300" height="400">
+			<img src="idealjobcap1.PNG" width="300" height="400">
 			<div>
-			<img src="idealjobcap2.PNG"/ style="float:left;" width="300" height="400"">
+			<img src="idealjobcap2.PNG" width="300" height="400">
 </div>
 			<div class="sectionContent">
 				<article>
